RESOLVED FIXED232068
StreamConnectionWorkQueue is not thread-safe
https://bugs.webkit.org/show_bug.cgi?id=232068
Summary StreamConnectionWorkQueue is not thread-safe
Kimmo Kinnunen
Reported 2021-10-21 01:23:40 PDT
StreamConnectionWorkQueue is not thread-safe It should be since RemoteRenderingBackend/RemoteDisplayListRecorder implementation is running on it and they add receivers.
Attachments
Patch (6.00 KB, patch)
2021-10-21 01:35 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-10-21 01:35:29 PDT
Wenson Hsieh
Comment 2 2021-10-21 08:43:10 PDT
Comment on attachment 441995 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=441995&action=review > Source/WebKit/Platform/IPC/StreamConnectionWorkQueue.cpp:38 > + // `StreamConnectionWorkQueue::stop()` should be called if anything has been dispatched or listened to. Should this also assert `m_shouldQuit`?
Kimmo Kinnunen
Comment 3 2021-10-22 00:50:35 PDT
(In reply to Wenson Hsieh from comment #2) > Should this also assert `m_shouldQuit`? No, it's ok to create the work queue and never start it and then destroy.
EWS
Comment 4 2021-10-22 01:18:24 PDT
Committed r284671 (243391@main): <https://commits.webkit.org/243391@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441995 [details].
Radar WebKit Bug Importer
Comment 5 2021-10-22 01:19:14 PDT
Note You need to log in before you can comment on or make changes to this bug.